--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   --bg: #0d0d0d;
   --surface: #161616;
   --text: #fdfdfd;
-  --muted: #cccccc;
+  --muted: #998c7e;
   --primary: #ffb300; /* dourado bem forte no contraste */
   --secondary: #ff5722; /* laranja queimado no contraste */
 }
